[gd_scene load_steps=7 format=3 uid="uid://cu7tw10dwcxn0"]

[ext_resource type="Texture2D" uid="uid://cytcrxk34gqiy" path="res://zombie-survival/graphics/night-env.png" id="1_gc311"]
[ext_resource type="Script" uid="uid://ejxvx1xslrrd" path="res://scripts/level.gd" id="1_oond3"]
[ext_resource type="PackedScene" uid="uid://df5lifdsjiber" path="res://scenes/player.tscn" id="2_5f57p"]
[ext_resource type="PackedScene" uid="uid://bqwckd2tmqwji" path="res://scenes/well.tscn" id="2_v1lpt"]
[ext_resource type="PackedScene" uid="uid://ge7tdvmuxmw4" path="res://scenes/zombie.tscn" id="3_v1lpt"]
[ext_resource type="PackedScene" uid="uid://pvf5p8j6m2ny" path="res://scenes/ui.tscn" id="6_2r41h"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("well")]
script = ExtResource("1_oond3")
well = NodePath("Well")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(574, 321)
scale = Vector2(1.1969618, 1.1467683)
texture = ExtResource("1_gc311")

[node name="Well" parent="." instance=ExtResource("2_v1lpt")]
position = Vector2(706, 554.00006)
scale = Vector2(0.48, 0.48)

[node name="Zombie" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_v1lpt")]
position = Vector2(234, 70)
scale = Vector2(0.5, 0.5)
target = NodePath("../Well")

[node name="Player" parent="." instance=ExtResource("2_5f57p")]
position = Vector2(534, 510.00006)
rotation = -1.6739453
scale = Vector2(0.5, 0.5)

[node name="Zombies" type="Node2D" parent="."]

[node name="ZombiesSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="bullets" type="Node2D" parent="."]

[node name="ui" parent="." instance=ExtResource("6_2r41h")]

[node name="ScoreTimer" type="Timer" parent="ui"]

[connection signal="collision" from="Zombie" to="." method="_on_zombie_collision"]
[connection signal="bullet" from="Player" to="." method="_on_player_bullet"]
[connection signal="timeout" from="ZombiesSpawnTimer" to="." method="_on_zombies_spawn_timer_timeout"]
[connection signal="timeout" from="ui/ScoreTimer" to="." method="_on_score_timer_timeout"]
